Added test and update docs

--- a/app/templates/mainpage.html
+++ b/app/templates/mainpage.html
@@ -1,3 +1,6 @@
+<!-- This is a simple html template that is using jinja to replace title
+information and can replace whatever ytou want using variables that are 
+passed to it. -->
 <html>
     <head>
         {% if title %}
@@ -7,6 +10,6 @@
         {% endif %}
     </head>
     <body>
-        This is kind of working lol
+        Just an example that a webpage can be made and given the data to be put in a table or whatever
     </body>
 </html>
